--- a/sentiment-network/Sentiment_Classification_Projects.ipynb
+++ b/sentiment-network/Sentiment_Classification_Projects.ipynb
@@ -791,7 +791,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('', 0), ('demotes', 1), ('zooms', 2), ('cheung', 3), ('canoe', 4), ('moratorium', 5), ('township', 6), ('markup', 7), ('flickerino', 8), ('makavejev', 9)]\n"
+      "[('', 0), ('trickery', 1), ('baser', 2), ('lulls', 3), ('unearths', 4), ('camelot', 5), ('secreteary', 6), ('quint', 7), ('obv', 8), ('convolute', 9)]\n"
      ]
     }
    ],
@@ -1180,7 +1180,7 @@
     "            # DONE: Get the next review and its correct label\n",
     "            review, label = training_reviews[i], training_labels[i]\n",
     "            \n",
-    "            # TODO: Implement the forward pass through the network. \n",
+    "            # DONE: Implement the forward pass through the network. \n",
     "            #       That means use the given review to update the input layer, \n",
     "            #       then calculate values for the hidden layer,\n",
     "            #       and finally calculate the output layer.\n",
