Updated Image Classification.

--- a/notebook/tf_simple_digit_classification.ipynb
+++ b/notebook/tf_simple_digit_classification.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Digit Classification: Logistic Classifier Implemented in Tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
