--- a/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -331,11 +331,11 @@
     "        \n",
     "    '''\n",
     "    # Declare placeholders we'll feed into the graph\n",
-    "    inputs = tf.placeholder(tf.int16, [batch_size, num_steps], name='inputs')\n",
-    "    targets = tf.placeholder(tf.int16, [batch_size, num_steps], name='targets')\n",
+    "    inputs = tf.placeholder(tf.int32, [batch_size, num_steps], name='inputs')\n",
+    "    targets = tf.placeholder(tf.int32, [batch_size, num_steps], name='targets')\n",
     "    \n",
     "    # Keep probability placeholder for drop out layers\n",
-    "    keep_prob = tf.placeholder(tf.float16)\n",
+    "    keep_prob = tf.placeholder(tf.float32)\n",
     "    \n",
     "    return inputs, targets, keep_prob"
    ]
@@ -390,8 +390,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def build_lstm(lstm_size, num_layers, batch_size, keep_prob):\n",
@@ -426,11 +428,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### My observations on the sizes\n",
+    "\n",
+    "Here's a network with LSTM cells:\n",
+    "\n",
+    "<img src=\"assets/charRNN.png\" width=500px>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have the following properties:\n",
+    " - $M$, **Number of Steps** is 5, because the sequence has 5 letters\n",
+    " - $N$, **Batch Size** is not shown\n",
+    " - $L$, **Hidden Units** is not shown\n",
+    " \n",
+    "We have $M$ LSTM cells per layer.\n",
+    "\n",
+    "The output of each LSTM cell is of size $L$.\n",
+    "\n",
+    "Each softmax block will have an output of size $N \\times C$\n",
+    "\n",
+    "Question: the softmax weights are the same for all softmax blocks in the figure?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### RNN Output\n",
     "\n",
     "Here we'll create the output layer. We need to connect the output of the RNN cells to a full connected layer with a softmax output. The softmax output gives us a probability distribution we can use to predict the next character, so we want this layer to have size $C$, the number of classes/characters we have in our text.\n",
     "\n",
-    "If our input has batch size $N$, number of steps $M$, and the hidden layer has $L$ hidden units, then the output is a 3D tensor with size $N \\times M \\times L$. The output of each LSTM cell has size $L$, we have $M$ of them, one for each sequence step, and we have $N$ sequences. So the total size is $N \\times M \\times L$. \n",
+    "If our input has batch size $N$, number of steps $M$, and the hidden layer has $L$ hidden units, then the output is a 3D tensor with size $N \\times M \\times L$. The output of each LSTM cell has size $L$, we have $M$ of them, one for each sequence step, and we have $N$ sequences. So the total size (*of the output*) is $N \\times M \\times L$. \n",
     "\n",
     "We are using the same fully connected layer, the same weights, for each of the outputs. Then, to make things easier, we should reshape the outputs into a 2D tensor with shape $(M * N) \\times L$. That is, one row for each sequence and step, where the values of each row are the output from the LSTM cells. We get the LSTM output as a list, `lstm_output`. First we need to concatenate this whole list into one array with [`tf.concat`](https://www.tensorflow.org/api_docs/python/tf/concat). Then, reshape it (with `tf.reshape`) to size $(M * N) \\times L$.\n",
     "\n",
@@ -441,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -461,22 +492,25 @@
     "\n",
     "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
     "    # Concatenate lstm_output over axis 1 (the columns)\n",
-    "    seq_output = \n",
+    "    seq_output = tf.concat(lstm_output, axis=1)\n",
     "    # Reshape seq_output to a 2D tensor with lstm_size columns\n",
-    "    x = \n",
+    "    x = tf.reshape(seq_output, [-1, in_size])\n",
     "    \n",
     "    # Connect the RNN outputs to a softmax layer\n",
     "    with tf.variable_scope('softmax'):\n",
     "        # Create the weight and bias variables here\n",
-    "        softmax_w = \n",
-    "        softmax_b = \n",
-    "    \n",
+    "        ini_std_dev = 1.0/np.sqrt(out_size)\n",
+    "        print(ini_std_dev)\n",
+    "        softmax_w = tf.Variable(tf.truncated_normal([in_size, out_size], stddev=ini_std_dev))\n",
+    "        softmax_b = tf.Variable(tf.zeros([out_size]))\n",
+    "        \n",
+    "         \n",
     "    # Since output is a bunch of rows of RNN cell outputs, logits will be a bunch\n",
     "    # of rows of logit outputs, one for each step and sequence\n",
-    "    logits = \n",
+    "    logits = tf.add(tf.matmul(x, softmax_w), softmax_b)\n",
     "    \n",
     "    # Use softmax to get the probabilities for predicted characters\n",
-    "    out = \n",
+    "    out = tf.nn.softmax(logits, name='predictions')\n",
     "    \n",
     "    return out, logits"
    ]
@@ -495,8 +529,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My Note: `targets` should be a matrix of integers where the rows\n",
+    "are batches and the columns are steps (i.e. characters)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -515,11 +557,12 @@
     "    '''\n",
     "    \n",
     "    # One-hot encode targets and reshape to match logits, one row per sequence per step\n",
-    "    y_one_hot = \n",
-    "    y_reshaped =  \n",
+    "    y_one_hot = tf.one_hot(targets, num_classes)\n",
+    "    y_reshaped = tf.reshape(y_one_hot, (-1, num_classes))\n",
     "    \n",
     "    # Softmax cross entropy loss\n",
-    "    loss = \n",
+    "    loss = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=y_reshaped)\n",
+    "    loss = tf.reduce_mean(loss)\n",
     "    \n",
     "    return loss"
    ]
@@ -535,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -572,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -594,25 +637,25 @@
     "        tf.reset_default_graph()\n",
     "        \n",
     "        # Build the input placeholder tensors\n",
-    "        self.inputs, self.targets, self.keep_prob = \n",
+    "        self.inputs, self.targets, self.keep_prob = build_inputs(batch_size, num_steps)\n",
     "\n",
     "        # Build the LSTM cell\n",
-    "        cell, self.initial_state = \n",
+    "        cell, self.initial_state = build_lstm(lstm_size, num_layers, batch_size, self.keep_prob)\n",
     "\n",
     "        ### Run the data through the RNN layers\n",
     "        # First, one-hot encode the input tokens\n",
-    "        x_one_hot = \n",
+    "        x_one_hot = tf.one_hot(self.inputs, num_classes)\n",
     "        \n",
     "        # Run each sequence step through the RNN with tf.nn.dynamic_rnn \n",
-    "        outputs, state =\n",
+    "        outputs, state = tf.nn.dynamic_rnn(cell, x_one_hot, initial_state=self.initial_state)\n",
     "        self.final_state = state\n",
     "        \n",
     "        # Get softmax predictions and logits\n",
-    "        self.prediction, self.logits = \n",
+    "        self.prediction, self.logits = build_output(outputs, lstm_size, num_classes)\n",
     "        \n",
     "        # Loss and optimizer (with gradient clipping)\n",
-    "        self.loss =  \n",
-    "        self.optimizer = "
+    "        self.loss = build_loss(self.prediction, self.targets, lstm_size, num_classes)\n",
+    "        self.optimizer = build_optimizer(self.loss, learning_rate, grad_clip) "
    ]
   },
   {
@@ -663,17 +706,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "batch_size = 10         # Sequences per batch\n",
-    "num_steps = 50          # Number of sequence steps per batch\n",
-    "lstm_size = 128         # Size of hidden layers in LSTMs\n",
+    "batch_size = 100        # Sequences per batch\n",
+    "num_steps = 100         # Number of sequence steps per batch\n",
+    "lstm_size = 512         # Size of hidden layers in LSTMs\n",
     "num_layers = 2          # Number of LSTM layers\n",
-    "learning_rate = 0.01    # Learning rate\n",
+    "learning_rate = 0.001   # Learning rate\n",
     "keep_prob = 0.5         # Dropout keep probability"
    ]
   },
@@ -694,12 +737,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
-    "collapsed": true,
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10976425999\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-58-644bcf8be34c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     28\u001b[0m                                                  \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfinal_state\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m                                                  model.optimizer], \n\u001b[1;32m---> 30\u001b[1;33m                                                  feed_dict=feed)\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m             \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m    893\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    894\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[1;32m--> 895\u001b[1;33m                          run_metadata_ptr)\n\u001b[0m\u001b[0;32m    896\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    897\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run\u001b[1;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m   1122\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mhandle\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mfeed_dict_tensor\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1123\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[1;32m-> 1124\u001b[1;33m                              feed_dict_tensor, options, run_metadata)\n\u001b[0m\u001b[0;32m   1125\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1126\u001b[0m       \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_run\u001b[1;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m   1319\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1320\u001b[0m       return self._do_call(_run_fn, self._session, feeds, fetches, targets,\n\u001b[1;32m-> 1321\u001b[1;33m                            options, run_metadata)\n\u001b[0m\u001b[0;32m   1322\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1323\u001b[0m       \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_do_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_prun_fn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeeds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetches\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_do_call\u001b[1;34m(self, fn, *args)\u001b[0m\n\u001b[0;32m   1325\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1326\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1327\u001b[1;33m       \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1328\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1329\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[1;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[0;32m   1304\u001b[0m           return tf_session.TF_Run(session, options,\n\u001b[0;32m   1305\u001b[0m                                    \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1306\u001b[1;33m                                    status, run_metadata)\n\u001b[0m\u001b[0;32m   1307\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1308\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msession\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "epochs = 20\n",
     "# Save every N iterations\n",
@@ -733,12 +799,11 @@
     "                                                 feed_dict=feed)\n",
     "            \n",
     "            end = time.time()\n",
-    "            print('Epoch: {}/{}... '.format(e+1, epochs),\n",
-    "                  'Training Step: {}... '.format(counter),\n",
-    "                  'Training loss: {:.4f}... '.format(batch_loss),\n",
-    "                  '{:.4f} sec/batch'.format((end-start)))\n",
-    "        \n",
     "            if (counter % save_every_n == 0):\n",
+    "                print('Epoch: {}/{}... '.format(e+1, epochs),\n",
+    "                      'Training Step: {}... '.format(counter),\n",
+    "                      'Training loss: {:.4f}... '.format(batch_loss),\n",
+    "                      '{:.4f} sec/batch'.format((end-start)))\n",
     "                saver.save(sess, \"checkpoints/i{}_l{}.ckpt\".format(counter, lstm_size))\n",
     "    \n",
     "    saver.save(sess, \"checkpoints/i{}_l{}.ckpt\".format(counter, lstm_size))"
