Word2Vec solutions.

--- a/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -820,11 +820,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "model_checkpoint_path: \"checkpoints\\\\i7940_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i200_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i400_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i600_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i800_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i1000_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i1200_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i1400_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i1600_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i1800_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i2000_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i2200_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i2400_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i2600_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i2800_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i3000_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i3200_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i3400_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i3600_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i3800_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i4000_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i4200_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i4400_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i4600_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i4800_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i5000_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i5200_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i5400_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i5600_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i5800_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i6000_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i6200_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i6400_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i6600_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i6800_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i7000_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i7200_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i7400_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i7600_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i7800_l512.ckpt\"\n",
+       "all_model_checkpoint_paths: \"checkpoints\\\\i7940_l512.ckpt\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.train.get_checkpoint_state('checkpoints')"
    ]
@@ -843,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -859,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -907,22 +956,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'checkpoints\\\\i7940_l512.ckpt'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.train.latest_checkpoint('checkpoints')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10976425999\n",
+      "INFO:tensorflow:Restoring parameters from checkpoints\\i7940_l512.ckpt\n",
+      "Farencal wifes to take his hothe, and at the\n",
+      "same time the meaning of the face in whom he had been to say to him, and to\n",
+      "be definitely than attention. All the things were a money ofting and whole\n",
+      "bassity in the pasing of the partition that he had too whined at the same\n",
+      "time. The same time, and tried, he was stone to him. All the sone of his\n",
+      "serene and three days the position was of the clank. And had seemed to him\n",
+      "and that she was not such thought that he had not said that it was not\n",
+      "in the point of those subject on the conversation with his brother. And\n",
+      "in the chech of the countess and her arrival, she had not a might hope\n",
+      "to say so as he was not to tell her, her mother, and what was already to\n",
+      "her own house, with the portial, while he could have asked him at\n",
+      "once, as the children, as she had been so cold in words as if he\n",
+      "was saying: \"You don't like,\" answered Levin, \"that's not a matter of\n",
+      "send to the stars of my son...\" he said, looking silent.\n",
+      "\n",
+      "\"I can see that I have the thee thing? And I don't know how it's only\n",
+      "it's not the sort of man, to be at a care and something but that you\n",
+      "darling what I'm so much! I sumply think, and I can see the tried of\n",
+      "this fact.\" The choice had been striking at the same thing to talk\n",
+      "of the steps or which she came in to her subjoct, and went up and she\n",
+      "saw her son, which was so so that he would see that her feeling and\n",
+      "hatred at the possibility of waiten shrowd her, but the crowd of\n",
+      "position and hands were still so thinking of she had the committee of\n",
+      "the marriagh.\n",
+      "\n",
+      "\"What are you taitiff?\"\n",
+      "\n",
+      "See a gentue of sight of the same.\n",
+      "\n",
+      "\"Oh, that's that impossible!\" said Vronsky. \"It's sorny, and how so?\"\n",
+      "\n",
+      "\"What is it they had all treet? And what are we always the porter? What\n",
+      "will think to think of your soul, it's not trouble! We're a merry too and\n",
+      "serious mare. This could so let them all!\"\n",
+      "\n",
+      "\"If you want to go into her eyes or not to believe it! I can't hind him\n",
+      "that I shall be so much from me. It's all now in the prince...\"\n",
+      "\n",
+      "\"Well, that's near\n"
+     ]
+    }
+   ],
    "source": [
     "checkpoint = tf.train.latest_checkpoint('checkpoints')\n",
     "samp = sample(checkpoint, 2000, lstm_size, len(vocab), prime=\"Far\")\n",
@@ -931,11 +1035,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10976425999\n",
+      "INFO:tensorflow:Restoring parameters from checkpoints/i200_l512.ckpt\n",
+      "Farnd thas,.\n",
+      "\n",
+      "\"\n",
+      "oet wat ine whe he hee who tist it ingensint at him wat at arethe her arate ansithe wesind to mile the shering on and aned an otirt the se he asd\n",
+      "seer the harerer ton to te woter an aned.\n",
+      "\"\n",
+      "\"Wils sos or he him head the heed what at ote th an heese sathe the hersind sethithe he hering wor an he sotin te himit hos wans he torand, wor he sos ite shas son hir asd isdand tha sase athe se tanes\n",
+      "se ans toe wotir wand the\n",
+      "seedesind\n",
+      "hed and saled ifit heredere ad thes arith he asterad hiresser an whans and thes tonte se sortas oot the tarithe has was tarind thet\n",
+      "ar itos, sothis\n",
+      "ath sose tate ther her and astat ine the thos ase the wathis and tis hars and whe te she coneserans an th aldind hatis he taren so site he torint tees\n",
+      "or ans on ar and sing hit hhe shes ware alede and where thered he ate te hos her whar ther to mhand sot he he tha th at thas he wing ant inthin hat the\n",
+      "carte sas on teere sot hote\n",
+      "his here an sade to he sade had, and to the the\n",
+      "calithe the terinnd har wheres th\n"
+     ]
+    }
+   ],
    "source": [
     "checkpoint = 'checkpoints/i200_l512.ckpt'\n",
     "samp = sample(checkpoint, 1000, lstm_size, len(vocab), prime=\"Far\")\n",
@@ -944,11 +1071,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10976425999\n",
+      "INFO:tensorflow:Restoring parameters from checkpoints/i600_l512.ckpt\n",
+      "Farlild\n",
+      "ser the chimt trouth him alone and sompand the\n",
+      "pisting to a collly was to doon and allother they wonked the sard the pissestiout with hame a dringed of the mone out on hor the shear his ald to she shoure,\n",
+      "and sere and tore al an to\n",
+      "carlisin on the mase anouthent.\n",
+      "\n",
+      "\n",
+      "Apeat hourded but and the post wand he diled to deat and\n",
+      "was anding hand his thee and seed the somer worl,\n",
+      "and was in the\n",
+      "pactire on a momt, and to beat they. The past at some as thene ta seress in and was of teer of\n",
+      "the passinit about of all she soid ot the partonst of her heas the posstond thet her had suntted tork to her soment of a stact and and\n",
+      "ton at a custiol the\n",
+      "cererestiding the said to betars to sain, with his ald and stice, and the pees as they wan intering. Bus here had and heatherss. Thet har as it wist over, whith wert wat\n",
+      "of the\n",
+      "pearithing, wo his war in has beathing a dearing, and\n",
+      "at alligh him han said the comers and tile on thay he cander as as that\n",
+      "she hear ald he cont and the panter of her\n",
+      "wand the mo\n"
+     ]
+    }
+   ],
    "source": [
     "checkpoint = 'checkpoints/i600_l512.ckpt'\n",
     "samp = sample(checkpoint, 1000, lstm_size, len(vocab), prime=\"Far\")\n",
@@ -957,11 +1110,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10976425999\n",
+      "INFO:tensorflow:Restoring parameters from checkpoints/i1200_l512.ckpt\n",
+      "Fardy the same to have been so have to\n",
+      "stopper atticting of him as and and trued the condor the sanger, and those her, the prosse to did not to the croom, and he\n",
+      "doing to him on the charrow, were to shouthers of she housed thinking on at and steppand the stopplates while to the positian, of her firsh only who his hands of\n",
+      "his was that it were a sacious, and with a somtent, and allart that with this saw as the might that which he was something to be the back of the\n",
+      "sole of his were\n",
+      "there, the mentance a chuld on she hand of his\n",
+      "for meaning te distoutt to blasted, with her has fact. Had brother to this something.\"\n",
+      "\n",
+      "\"These you gat her a moment was now a serstar of as the sheed, there.\"\n",
+      "\n",
+      "\"That's is im any,\" he should not to be to him, but he hig the chulding of his heatt and a most ot ond that his wondess of his had sone was a life. And that see what he heard at the sempost off in the rooms was a langre out of the prestion\n",
+      "of her.\n",
+      "\n",
+      "\"Well! I have the prasent, were iffice it was anyouged.\"\n",
+      "\n",
+      "\"In \n"
+     ]
+    }
+   ],
    "source": [
     "checkpoint = 'checkpoints/i1200_l512.ckpt'\n",
     "samp = sample(checkpoint, 1000, lstm_size, len(vocab), prime=\"Far\")\n",
