Finished the TV script generation project.

--- a/embeddings/Skip-Gram_word2vec.ipynb
+++ b/embeddings/Skip-Gram_word2vec.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -78,8 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from urllib.request import urlretrieve\n",
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -231,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total words: 4627949\n",
+      "Total words: 4627121\n",
       "We selected 27.74% of the words.\n",
       "Unique words: 63641\n"
      ]
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -407,8 +409,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_vocab = len(int_to_vocab)\n",
@@ -439,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -471,8 +475,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -497,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -629,13 +635,7 @@
       "Nearest to during: episcopal, ionization, became, coffin, fca, lithuanian, symbolise, neighbouring,\n",
       "Nearest to used: seton, introduce, bundles, pity, newcomers, arching, alva, rational,\n",
       "Nearest to from: outright, wards, organizations, acclaimed, kenilworth, refuse, localized, soares,\n",
-      "Nearest to quite: auroral, notes, relevance, investigating, huey, surinam, idea, terrain,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nearest to quite: auroral, notes, relevance, investigating, huey, surinam, idea, terrain,\n",
       "Nearest to proposed: means, harder, negatives, substantially, topping, l, zf, oswego,\n",
       "Nearest to scale: renew, embryo, chernenko, vice, formed, spider, coastal, exceptionally,\n",
       "Nearest to resources: mccoy, minicomputer, saturdays, troops, advantageous, combs, cinematography, bringing,\n",
@@ -831,13 +831,7 @@
       "Nearest to writers: dell, easton, masterwork, barfield, books, dredged, physicians, dykes,\n",
       "Nearest to freedom: speech, connotation, condemned, laws, blaming, amulets, semite, declination,\n",
       "Nearest to derived: imperfective, choking, predators, exorbitant, bribed, omnipotent, ngc, elevates,\n",
-      "Epoch 3/10 Iteration: 11100 Avg. Training loss: 4.1147 0.3212 sec/batch\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 3/10 Iteration: 11100 Avg. Training loss: 4.1147 0.3212 sec/batch\n",
       "Epoch 3/10 Iteration: 11200 Avg. Training loss: 4.1844 0.3165 sec/batch\n",
       "Epoch 3/10 Iteration: 11300 Avg. Training loss: 4.1341 0.3165 sec/batch\n",
       "Epoch 3/10 Iteration: 11400 Avg. Training loss: 4.1246 0.3170 sec/batch\n",
@@ -1035,13 +1029,7 @@
       "Epoch 5/10 Iteration: 18800 Avg. Training loss: 3.9045 0.3185 sec/batch\n",
       "Epoch 5/10 Iteration: 18900 Avg. Training loss: 3.9461 0.3179 sec/batch\n",
       "Epoch 5/10 Iteration: 19000 Avg. Training loss: 3.8603 0.3172 sec/batch\n",
-      "Nearest to his: tombstone, he, himself, pepys, guthrum, jehoshaphat, drowned, ments,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nearest to his: tombstone, he, himself, pepys, guthrum, jehoshaphat, drowned, ments,\n",
       "Nearest to history: astronautica, transcends, combinatorics, tver, rhodesia, summarized, quinn, albertus,\n",
       "Nearest to by: takings, shortly, obeying, bem, windmill, sikh, v, retaliated,\n",
       "Nearest to up: speeds, quebecois, pechenegs, crafting, lap, davidian, flip, orser,\n",
@@ -1240,13 +1228,7 @@
       "Nearest to quite: surinam, huey, relevance, iru, drugged, antoninianus, stressed, ile,\n",
       "Nearest to proposed: withhold, amendment, principal, mayer, divest, ridgway, model, reconstructions,\n",
       "Nearest to scale: scales, notes, tempered, tonality, traction, perceived, chernenko, possibilities,\n",
-      "Nearest to resources: arable, ore, gis, cth, minicomputer, vegetarianism, mccoy, transhumanism,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nearest to resources: arable, ore, gis, cth, minicomputer, vegetarianism, mccoy, transhumanism,\n",
       "Nearest to brother: son, sister, protectorate, violently, hecuba, sardinia, clement, eldest,\n",
       "Nearest to writers: novelists, comedians, barfield, playwrights, shiraz, existentialism, dykes, masterwork,\n",
       "Nearest to freedom: speech, blaming, laissez, talionis, autographed, grue, olimp, gardiner,\n",
@@ -1341,9 +1323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from checkpoints\\text8.ckpt\n"
+     ]
+    }
+   ],
    "source": [
     "with train_graph.as_default():\n",
     "    saver = tf.train.Saver()\n",
@@ -1393,7 +1383,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(14, 14))\n",
