--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -1074,9 +1074,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:proj3env]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-proj3env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1088,7 +1088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.2"
   },
   "widgets": {
    "state": {},
