Conv GAN Lesson.

--- a/batch-norm/Batch_Normalization_Exercises.ipynb
+++ b/batch-norm/Batch_Normalization_Exercises.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -398,7 +398,12 @@
       "Batch: 650: Training loss: 0.12900, Training accuracy: 0.70312\n",
       "Batch: 675: Training loss: 0.15451, Training accuracy: 0.68750\n",
       "Batch: 700: Validation loss: 0.12430, Validation accuracy: 0.76420\n",
-      "Batch: 725: Training loss: 0.14818, Training accuracy: 0.70312\n"
+      "Batch: 725: Training loss: 0.14818, Training accuracy: 0.70312\n",
+      "Batch: 750: Training loss: 0.12951, Training accuracy: 0.71875\n",
+      "Batch: 775: Training loss: 0.08629, Training accuracy: 0.82812\n",
+      "Final validation accuracy: 0.80260\n",
+      "Final test accuracy: 0.79810\n",
+      "Accuracy on 100 samples: 0.8\n"
      ]
     }
    ],
